ingress/home-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    app: home
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: home 
      template:
        metadata:
          name: home-template
          labels:
            app: home 
        spec:
          containers:
          - name: nginx-container
            image: nginx:latest
            ports:
            - name: myport
              containerPort: 80
...
---

apiVersion: v1
kind: Service
metadata:
  name: home-svc
  labels:
    app: home-svc
spec:
  type: ClusterIP 
  selector:
    app: home
  ports:
  - name: home-svc-port
    protocol: TCP
    port: 80
    targetPort: 80   
...
