ingress/laptop-deploy-svc.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: laptop-deployment 
  labels: 
    app: laptop
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: laptop
  template: 
    metadata: 
      name: laptop-template 
      labels: 
        app: laptop 
    spec: 
      containers: 
        - name: tomcat-container 
          image: tomcat:latest
          ports:
            - name: myport 
              containerPort: 8080
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: laptop-svc 
  labels: 
    app: laptop
spec: 
  type: ClusterIP 
  selector: 
    app: laptop
  ports: 
    - name: laptop-svc-port 
      protocol: TCP 
      port: 8080
      targetPort: 8080
...
