ingress/mobile-deploy-svc.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: mobile-deployment 
  labels: 
    app: mobile
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: mobile
  template: 
    metadata: 
      name: mobile-template 
      labels: 
        app: mobile
    spec: 
      containers: 
        - name: httpd-container 
          image: httpd:latest
          ports: 
            - name: myport 
              containerPort: 80
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: mobile-svc 
  labels: 
    app: mobile
spec: 
  type: ClusterIP 
  selector: 
    app: mobile
  ports: 
    - name: mobile-svc-port 
      protocol: TCP 
      port: 80
      targetPort: 80
...
